--- a/404.md
+++ b/404.md
@@ -3,4 +3,6 @@ title: 404
 layout: layouts/page.njk
 permalink: /404.html
 ---
-Uh oh, the resource you requested isn't here. Sorry.
+Oops !
+
+Nous n’avons pas trouvé cette page. Désolé.
